# tooluse-generator

./: .env.example  .gitignore  .pre-commit-config.yaml  DESIGN.md  Makefile  README.md  pyproject.toml
config/: default.yaml
scripts/: run_diversity_experiment.py  run_e2e_pipeline.py  run_full_e2e_real_data.py  run_real_toolbench_e2e.py
src/tooluse_gen/: __init__.py
src/tooluse_gen/agents/: __init__.py  argument_generator.py  assistant_agent.py  batch_generator.py  conversation_models.py  execution_models.py  grounding.py  orchestrator.py  state_machine.py  tool_executor.py  user_simulator.py  value_generator.py
src/tooluse_gen/cli/: __init__.py  main.py  progress.py
src/tooluse_gen/core/: __init__.py  cache.py  clients.py  config.py  jsonl_io.py  llm_client.py  output_models.py  reproducibility.py  secrets.py
src/tooluse_gen/evaluation/: __init__.py  diversity_report.py  judge.py  models.py  pipeline.py  repair.py  validator.py
src/tooluse_gen/graph/: __init__.py  builder.py  chain_models.py  diversity.py  embeddings.py  facade.py  models.py  patterns.py  persistence.py  queries.py  sampler.py
src/tooluse_gen/registry/: __init__.py  completeness.py  loader.py  models.py  normalizers.py  registry.py  response_schema.py  serialization.py  type_inference.py
src/tooluse_gen/utils/: __init__.py  logging.py  progress.py  seeding.py
tests/: conftest.py
tests/e2e/: test_diversity_experiment.py  test_full_pipeline.py  test_pipeline_e2e.py
tests/helpers/: fake_llm.py  vcr_recorder.py
tests/integration/: test_build.py  test_cli.py  test_evaluate.py  test_generate.py  test_generation_flow.py  test_retry_repair.py
tests/unit/: conftest.py  test_agents_integration.py  test_argument_generator.py  test_assistant_agent.py  test_batch_generator.py  test_batch_progress.py  test_cache.py  test_chain_models.py  test_chain_patterns.py  test_cli.py  test_cli_flags.py  test_cli_progress.py  test_completeness.py  test_config.py  test_conversation_models.py  test_diversity.py  test_diversity_report.py  test_embeddings.py  test_error_handling.py  test_evaluation_integration.py  test_evaluation_pipeline.py  test_execution_integration.py  test_execution_models.py  test_fake_llm.py  test_graph_builder.py  test_graph_integration.py  test_graph_models.py  test_graph_persistence.py  test_graph_queries.py  test_grounding.py  test_infrastructure.py  test_input_validation.py  test_interrupt_batch.py  test_jsonl_io.py  test_judge.py  test_judge_models.py  test_llm_client.py  test_llm_integration.py  test_loader.py  test_logging.py  (+25 more)
